# TaskApiGenerator

./: .gitmodules  CMakeLists.txt  CMakeSettings.json
Src/: CMakeLists.txt  main.cpp
